# slicr

./: README.md  pyproject.toml
.github/workflows/: main.yml  pypi.yml
