[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slicr"
version = "0.1.0"
description = "A tiny CLI that prints hello world."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Oliver Chester" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
slicr = "slicr.__main__:main"

[project.urls]
Homepage = "https://github.com/oliver-gc/slicr"
Repository = "https://github.com/oliver-gc/slicr"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
